--- a/httpdocs/assets/styles/sass/overrides/_shame.scss
+++ b/httpdocs/assets/styles/sass/overrides/_shame.scss
@@ -1,9 +1,8 @@
 //clearfix
-.clearfix:before,
-.clearfix:after {
-  content:"";
-  display:table;
+.clearfix:before, .clearfix:after {
+  content: "";
+  display: table;
 }
 .clearfix:after {
-  clear:both;
+  clear: both;
 }
