--- a/httpdocs/assets/styles/css/app.resorted.css
+++ b/httpdocs/assets/styles/css/app.resorted.css
@@ -6,21 +6,34 @@
  * Correct `block` display not defined in IE 8/9.
  */
 /* line 11, ../sass/overrides/_normalize.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
   display: block; }
 
 /**
  * Correct `inline-block` display not defined in IE 8/9.
  */
-/* line 19, ../sass/overrides/_normalize.scss */
-audio, canvas, video {
+/* line 30, ../sass/overrides/_normalize.scss */
+audio,
+canvas,
+video {
   display: inline-block; }
 
 /**
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
-/* line 28, ../sass/overrides/_normalize.scss */
+/* line 41, ../sass/overrides/_normalize.scss */
 audio:not([controls]) {
   display: none;
   height: 0; }
@@ -29,11 +42,12 @@ audio:not([controls]) {
  * Address `[hidden]` styling not present in IE 8/9.
  * Hide the `template` element in IE, Safari, and Firefox < 22.
  */
-/* line 38, ../sass/overrides/_normalize.scss */
-[hidden], template {
+/* line 51, ../sass/overrides/_normalize.scss */
+[hidden],
+template {
   display: none; }
 
-/* line 42, ../sass/overrides/_normalize.scss */
+/* line 56, ../sass/overrides/_normalize.scss */
 script {
   display: none !important; }
 
@@ -45,19 +59,19 @@ script {
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
-/* line 56, ../sass/overrides/_normalize.scss */
+/* line 70, ../sass/overrides/_normalize.scss */
 html {
   font-family: sans-serif;
   /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
   -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
   /* 2 */ }
 
 /**
  * Remove default margin.
  */
-/* line 67, ../sass/overrides/_normalize.scss */
+/* line 80, ../sass/overrides/_normalize.scss */
 body {
   margin: 0; }
 
@@ -67,22 +81,23 @@ body {
 /**
  * Remove the gray background color from active links in IE 10.
  */
-/* line 79, ../sass/overrides/_normalize.scss */
+/* line 92, ../sass/overrides/_normalize.scss */
 a {
   background: transparent; }
 
 /**
  * Address `outline` inconsistency between Chrome and other browsers.
  */
-/* line 87, ../sass/overrides/_normalize.scss */
+/* line 100, ../sass/overrides/_normalize.scss */
 a:focus {
   outline: thin dotted; }
 
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
-/* line 95, ../sass/overrides/_normalize.scss */
-a:active, a:hover {
+/* line 108, ../sass/overrides/_normalize.scss */
+a:active,
+a:hover {
   outline: 0; }
 
 /* ==========================================================================
@@ -92,7 +107,7 @@ a:active, a:hover {
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari 5, and Chrome.
  */
-/* line 108, ../sass/overrides/_normalize.scss */
+/* line 122, ../sass/overrides/_normalize.scss */
 h1 {
   font-size: 2em;
   margin: 0.67em 0; }
@@ -100,28 +115,29 @@ h1 {
 /**
  * Address styling not present in IE 8/9, Safari 5, and Chrome.
  */
-/* line 117, ../sass/overrides/_normalize.scss */
+/* line 131, ../sass/overrides/_normalize.scss */
 abbr[title] {
   border-bottom: 1px dotted; }
 
 /**
  * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
  */
-/* line 125, ../sass/overrides/_normalize.scss */
-b, strong {
+/* line 139, ../sass/overrides/_normalize.scss */
+b,
+strong {
   font-weight: bold; }
 
 /**
  * Address styling not present in Safari 5 and Chrome.
  */
-/* line 133, ../sass/overrides/_normalize.scss */
+/* line 148, ../sass/overrides/_normalize.scss */
 dfn {
   font-style: italic; }
 
 /**
  * Address differences between Firefox and other browsers.
  */
-/* line 141, ../sass/overrides/_normalize.scss */
+/* line 156, ../sass/overrides/_normalize.scss */
 hr {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -130,55 +146,59 @@ hr {
 /**
  * Address styling not present in IE 8/9.
  */
-/* line 151, ../sass/overrides/_normalize.scss */
+/* line 166, ../sass/overrides/_normalize.scss */
 mark {
-  background: #ffff00;
-  color: #000000; }
+  background: #ff0;
+  color: #000; }
 
 /**
  * Correct font family set oddly in Safari 5 and Chrome.
  */
-/* line 160, ../sass/overrides/_normalize.scss */
-code, kbd, pre, samp {
+/* line 175, ../sass/overrides/_normalize.scss */
+code,
+kbd,
+pre,
+samp {
   font-family: monospace, serif;
   font-size: 1em; }
 
 /**
  * Improve readability of pre-formatted text in all browsers.
  */
-/* line 169, ../sass/overrides/_normalize.scss */
+/* line 187, ../sass/overrides/_normalize.scss */
 pre {
   white-space: pre-wrap; }
 
 /**
  * Set consistent quote types.
  */
-/* line 177, ../sass/overrides/_normalize.scss */
+/* line 195, ../sass/overrides/_normalize.scss */
 q {
   quotes: "\201C" "\201D" "\2018" "\2019"; }
 
 /**
  * Address inconsistent and variable font size in all browsers.
  */
-/* line 185, ../sass/overrides/_normalize.scss */
+/* line 203, ../sass/overrides/_normalize.scss */
 small {
   font-size: 80%; }
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
-/* line 193, ../sass/overrides/_normalize.scss */
-sub, sup {
+/* line 211, ../sass/overrides/_normalize.scss */
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
   vertical-align: baseline; }
 
-/* line 200, ../sass/overrides/_normalize.scss */
+/* line 219, ../sass/overrides/_normalize.scss */
 sup {
   top: -0.5em; }
 
-/* line 204, ../sass/overrides/_normalize.scss */
+/* line 223, ../sass/overrides/_normalize.scss */
 sub {
   bottom: -0.25em; }
 
@@ -188,14 +208,14 @@ sub {
 /**
  * Remove border when inside `a` element in IE 8/9.
  */
-/* line 216, ../sass/overrides/_normalize.scss */
+/* line 235, ../sass/overrides/_normalize.scss */
 img {
   border: 0; }
 
 /**
  * Correct overflow displayed oddly in IE 9.
  */
-/* line 224, ../sass/overrides/_normalize.scss */
+/* line 243, ../sass/overrides/_normalize.scss */
 svg:not(:root) {
   overflow: hidden; }
 
@@ -205,7 +225,7 @@ svg:not(:root) {
 /**
  * Address margin not present in IE 8/9 and Safari 5.
  */
-/* line 236, ../sass/overrides/_normalize.scss */
+/* line 255, ../sass/overrides/_normalize.scss */
 figure {
   margin: 0; }
 
@@ -215,7 +235,7 @@ figure {
 /**
  * Define consistent border, margin, and padding.
  */
-/* line 248, ../sass/overrides/_normalize.scss */
+/* line 267, ../sass/overrides/_normalize.scss */
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
@@ -225,7 +245,7 @@ fieldset {
  * 1. Correct `color` not being inherited in IE 8/9.
  * 2. Remove padding so people aren't caught out if they zero out fieldsets.
  */
-/* line 259, ../sass/overrides/_normalize.scss */
+/* line 278, ../sass/overrides/_normalize.scss */
 legend {
   border: 0;
   /* 1 */
@@ -237,8 +257,11 @@ legend {
  * 2. Correct font size not being inherited in all browsers.
  * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
  */
-/* line 270, ../sass/overrides/_normalize.scss */
-button, input, select, textarea {
+/* line 289, ../sass/overrides/_normalize.scss */
+button,
+input,
+select,
+textarea {
   font-family: inherit;
   /* 1 */
   font-size: 100%;
@@ -250,8 +273,9 @@ button, input, select, textarea {
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
-/* line 281, ../sass/overrides/_normalize.scss */
-button, input {
+/* line 303, ../sass/overrides/_normalize.scss */
+button,
+input {
   line-height: normal; }
 
 /**
@@ -260,8 +284,9 @@ button, input {
  * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
  * Correct `select` style inheritance in Firefox 4+ and Opera.
  */
-/* line 292, ../sass/overrides/_normalize.scss */
-button, select {
+/* line 315, ../sass/overrides/_normalize.scss */
+button,
+select {
   text-transform: none; }
 
 /**
@@ -271,27 +296,31 @@ button, select {
  * 3. Improve usability and consistency of cursor style between image-type
  *    `input` and others.
  */
-/* line 304, ../sass/overrides/_normalize.scss */
-button, html input[type="button"],
-input[type="reset"], input[type="submit"] {
-  cursor: pointer;
-  /* 3 */
+/* line 328, ../sass/overrides/_normalize.scss */
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
   -webkit-appearance: button;
-  /* 2 */ }
+  /* 2 */
+  cursor: pointer;
+  /* 3 */ }
 
 /**
  * Re-set default cursor for disabled elements.
  */
-/* line 315, ../sass/overrides/_normalize.scss */
-button[disabled], html input[disabled] {
+/* line 340, ../sass/overrides/_normalize.scss */
+button[disabled],
+html input[disabled] {
   cursor: default; }
 
 /**
  * 1. Address box sizing set to `content-box` in IE 8/9.
  * 2. Remove excess padding in IE 8/9.
  */
-/* line 324, ../sass/overrides/_normalize.scss */
-input[type="checkbox"], input[type="radio"] {
+/* line 350, ../sass/overrides/_normalize.scss */
+input[type="checkbox"],
+input[type="radio"] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -302,28 +331,30 @@ input[type="checkbox"], input[type="radio"] {
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
-/* line 335, ../sass/overrides/_normalize.scss */
+/* line 362, ../sass/overrides/_normalize.scss */
 input[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   /* 2 */
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  -webkit-appearance: textfield;
-  /* 1 */ }
+  box-sizing: content-box; }
 
 /**
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
-/* line 348, ../sass/overrides/_normalize.scss */
-input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
+/* line 374, ../sass/overrides/_normalize.scss */
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none; }
 
 /**
  * Remove inner padding and border in Firefox 4+.
  */
-/* line 356, ../sass/overrides/_normalize.scss */
-button::-moz-focus-inner, input::-moz-focus-inner {
+/* line 383, ../sass/overrides/_normalize.scss */
+button::-moz-focus-inner,
+input::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
@@ -331,7 +362,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
  * 1. Remove default vertical scrollbar in IE 8/9.
  * 2. Improve readability and alignment in all browsers.
  */
-/* line 366, ../sass/overrides/_normalize.scss */
+/* line 394, ../sass/overrides/_normalize.scss */
 textarea {
   overflow: auto;
   /* 1 */
@@ -344,7 +375,7 @@ textarea {
 /**
  * Remove most spacing between table cells.
  */
-/* line 379, ../sass/overrides/_normalize.scss */
+/* line 407, ../sass/overrides/_normalize.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
@@ -8565,66 +8596,66 @@ a {
     -ms-user-select: none;
     user-select: none; }
 
-/* line 53, ../sass/utility/_type_mixins.scss */
+/* line 55, ../sass/utility/_type_mixins.scss */
 .ligatures {
-  -webkit-font-feature-settings: "liga", "dlig";
   -moz-font-feature-settings: "liga=1, dlig=1";
   -ms-font-feature-settings: "liga", "dlig";
+  -webkit-font-feature-settings: "liga", "dlig";
   -o-font-feature-settings: "liga", "dlig";
   font-feature-settings: "liga", "dlig"; }
 
-/* line 60, ../sass/utility/_type_mixins.scss */
+/* line 62, ../sass/utility/_type_mixins.scss */
 .fractions {
-  -webkit-font-feature-settings: "frac" 1;
-  -moz-font-feature-settings: "frac=1";
   -moz-font-feature-settings: "frac" 1;
+  -moz-font-feature-settings: "frac=1";
   -ms-font-feature-settings: "frac" 1;
   -o-font-feature-settings: "frac" 1;
+  -webkit-font-feature-settings: "frac" 1;
   font-feature-settings: "frac" 1; }
 
-/* line 68, ../sass/utility/_type_mixins.scss */
+/* line 70, ../sass/utility/_type_mixins.scss */
 .little-numbers {
-  -webkit-font-feature-settings: "onum" 1;
-  -moz-font-feature-settings: "onum=1";
   -moz-font-feature-settings: "onum" 1;
+  -moz-font-feature-settings: "onum=1";
   -ms-font-feature-settings: "onum" 1;
   -o-font-feature-settings: "onum" 1;
+  -webkit-font-feature-settings: "onum" 1;
   font-feature-settings: "onum" 1; }
 
-/* line 76, ../sass/utility/_type_mixins.scss */
+/* line 78, ../sass/utility/_type_mixins.scss */
 .big-numbers {
-  -webkit-font-feature-settings: "lnum" 1;
-  -moz-font-feature-settings: "lnum=1";
   -moz-font-feature-settings: "lnum" 1;
+  -moz-font-feature-settings: "lnum=1";
   -ms-font-feature-settings: "lnum" 1;
   -o-font-feature-settings: "lnum" 1;
+  -webkit-font-feature-settings: "lnum" 1;
   font-feature-settings: "lnum" 1; }
 
-/* line 84, ../sass/utility/_type_mixins.scss */
+/* line 86, ../sass/utility/_type_mixins.scss */
 .small-caps {
-  -webkit-font-feature-settings: "smcp" 1;
-  -moz-font-feature-settings: "smcp=1";
   -moz-font-feature-settings: "smcp" 1;
+  -moz-font-feature-settings: "smcp=1";
   -ms-font-feature-settings: "smcp" 1;
   -o-font-feature-settings: "smcp" 1;
+  -webkit-font-feature-settings: "smcp" 1;
   font-feature-settings: "smcp" 1; }
 
-/* line 92, ../sass/utility/_type_mixins.scss */
+/* line 94, ../sass/utility/_type_mixins.scss */
 .sub-script {
-  -webkit-font-feature-settings: "subs" 1;
-  -moz-font-feature-settings: "subs=1";
   -moz-font-feature-settings: "subs" 1;
+  -moz-font-feature-settings: "subs=1";
   -ms-font-feature-settings: "subs" 1;
   -o-font-feature-settings: "subs" 1;
+  -webkit-font-feature-settings: "subs" 1;
   font-feature-settings: "subs" 1; }
 
-/* line 100, ../sass/utility/_type_mixins.scss */
+/* line 102, ../sass/utility/_type_mixins.scss */
 .super-script {
-  -webkit-font-feature-settings: "sups" 1;
-  -moz-font-feature-settings: "sups=1";
   -moz-font-feature-settings: "sups" 1;
+  -moz-font-feature-settings: "sups=1";
   -ms-font-feature-settings: "sups" 1;
   -o-font-feature-settings: "sups" 1;
+  -webkit-font-feature-settings: "sups" 1;
   font-feature-settings: "sups" 1; }
 
 /* line 4, ../sass/base/_typography.scss */
@@ -8700,10 +8731,11 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer; }
 
 /* line 2, ../sass/overrides/_shame.scss */
-.clearfix:before, .clearfix:after {
+.clearfix:before,
+.clearfix:after {
   content: "";
   display: table; }
 
-/* line 6, ../sass/overrides/_shame.scss */
+/* line 7, ../sass/overrides/_shame.scss */
 .clearfix:after {
   clear: both; }
