--- a/public/assets/styles/sass/_normalize.scss
+++ b/public/assets/styles/sass/_normalize.scss
@@ -8,9 +8,8 @@
 
 html {
   font-family: sans-serif; /* 1 */
-
-  -webkit-text-size-adjust: 100%; /* 2 */
   -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /**
@@ -31,7 +30,19 @@ body {
  * Correct `block` display not defined for `main` in IE 11.
  */
 
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
   display: block;
 }
 
@@ -40,7 +51,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
  * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
  */
 
-audio, canvas, progress, video {
+audio,
+canvas,
+progress,
+video {
   display: inline-block; /* 1 */
   vertical-align: baseline; /* 2 */
 }
@@ -60,7 +74,8 @@ audio:not([controls]) {
  * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
  */
 
-[hidden], template {
+[hidden],
+template {
   display: none;
 }
 
@@ -80,7 +95,8 @@ a {
  * active/hover state.
  */
 
-a:active, a:hover {
+a:active,
+a:hover {
   outline: 0;
 }
 
@@ -99,7 +115,8 @@ abbr[title] {
  * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
  */
 
-b, strong {
+b,
+strong {
   font-weight: bold;
 }
 
@@ -126,8 +143,8 @@ h1 {
  */
 
 mark {
-  background: #ffff00;
-  color: #000000;
+  background: #ff0;
+  color: #000;
 }
 
 /**
@@ -142,7 +159,8 @@ small {
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
 
-sub, sup {
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -208,7 +226,10 @@ pre {
  * Address odd `em`-unit font size rendering in all browsers.
  */
 
-code, kbd, pre, samp {
+code,
+kbd,
+pre,
+samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
@@ -228,7 +249,11 @@ code, kbd, pre, samp {
  * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
  */
 
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
   color: inherit; /* 1 */
   font: inherit; /* 2 */
   margin: 0; /* 3 */
@@ -249,7 +274,8 @@ button {
  * Correct `select` style inheritance in Firefox.
  */
 
-button, select {
+button,
+select {
   text-transform: none;
 }
 
@@ -261,18 +287,20 @@ button, select {
  *    `input` and others.
  */
 
-button, html input[type="button"], /* 1 */
-input[type="reset"], input[type="submit"] {
-  cursor: pointer; /* 3 */
-
+button,
+html input[type="button"], /* 1 */
+input[type="reset"],
+input[type="submit"] {
   -webkit-appearance: button; /* 2 */
+  cursor: pointer; /* 3 */
 }
 
 /**
  * Re-set default cursor for disabled elements.
  */
 
-button[disabled], html input[disabled] {
+button[disabled],
+html input[disabled] {
   cursor: default;
 }
 
@@ -280,7 +308,8 @@ button[disabled], html input[disabled] {
  * Remove inner padding and border in Firefox 4+.
  */
 
-button::-moz-focus-inner, input::-moz-focus-inner {
+button::-moz-focus-inner,
+input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
@@ -302,7 +331,8 @@ input {
  * 2. Remove excess padding in IE 8/9/10.
  */
 
-input[type="checkbox"], input[type="radio"] {
+input[type="checkbox"],
+input[type="radio"] {
   box-sizing: border-box; /* 1 */
   padding: 0; /* 2 */
 }
@@ -313,7 +343,8 @@ input[type="checkbox"], input[type="radio"] {
  * decrement button to change from `default` to `text`.
  */
 
-input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -323,9 +354,8 @@ input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-o
  */
 
 input[type="search"] {
-  box-sizing: content-box; /* 2 */
-
   -webkit-appearance: textfield; /* 1 */
+  box-sizing: content-box; /* 2 */
 }
 
 /**
@@ -334,7 +364,8 @@ input[type="search"] {
  * padding (and `textfield` appearance).
  */
 
-input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -387,6 +418,7 @@ table {
   border-spacing: 0;
 }
 
-td, th {
+td,
+th {
   padding: 0;
 }
