--- a/public/assets/styles/sass/foundation/components/_flex-video.scss
+++ b/public/assets/styles/sass/foundation/components/_flex-video.scss
@@ -1,68 +1,51 @@
-// Foundation for Sites by ZURB
+// Foundation by ZURB
 // foundation.zurb.com
 // Licensed under MIT Open Source
 
-////
-/// @group flex-video
-////
+@import 'global';
 
-/// Padding above a flex video container.
-/// @type Number
-$flexvideo-padding-top: rem-calc(25) !default;
+//
+// @variables
+//
+$include-html-media-classes: $include-html-classes !default;
 
-/// Margin below a flex video container.
-/// @type Number
-$flexvideo-margin-bottom: rem-calc(16) !default;
+// We use these to control video container padding and margins
+$flex-video-padding-top: rem-calc(25) !default;
+$flex-video-padding-bottom: 67.5% !default;
+$flex-video-margin-bottom: rem-calc(16) !default;
 
-/// Padding used to create a 4:3 aspect ratio.
-/// @type Number
-$flexvideo-ratio: 4 by 3 !default;
+// We use this to control widescreen bottom padding
+$flex-video-widescreen-padding-bottom: 56.34% !default;
 
-/// Padding used to create a 16:9 aspect ratio.
-/// @type Number
-$flexvideo-ratio-widescreen: 16 by 9 !default;
+//
+// @mixins
+//
 
-/// Creates a percentage height that can be used as padding in a flex video container.
-/// @param {List} $ratio - Ratio to use to calculate the height, formatted as `x by y`.
-/// @return {Number} A percentage value that can be used as the `padding-bottom` parameter of a flex video container.
-@function flex-video($ratio) {
-  $w: nth($ratio, 1);
-  $h: nth($ratio, 3);
-  @return $h / $w * 100%;
-}
-
-/// Creates a flex video container.
-/// @param {List} $ratio [$flexvideo-ratio] - Ratio to use for the container, formatted as `x by y`.
-@mixin flex-video($ratio: $flexvideo-ratio) {
-  position: relative;
+@mixin flex-video-container {
   height: 0;
-  padding-top: $flexvideo-padding-top;
-  padding-bottom: flex-video($ratio);
-  margin-bottom: $flexvideo-margin-bottom;
+  margin-bottom: $flex-video-margin-bottom;
   overflow: hidden;
+  padding-bottom: $flex-video-padding-bottom;
+  padding-top: $flex-video-padding-top;
+  position: relative;
+
+  &.widescreen { padding-bottom: $flex-video-widescreen-padding-bottom; }
+  &.vimeo { padding-top: 0; }
 
   iframe,
   object,
   embed,
   video {
+    height: 100%;
     position: absolute;
     top: 0;
-    #{$global-left}: 0;
     width: 100%;
-    height: 100%;
+    #{$default-float}: 0;
   }
 }
 
-@mixin foundation-flex-video {
-  .flex-video {
-    @include flex-video;
-
-    &.widescreen {
-      padding-bottom: flex-video($flexvideo-ratio-widescreen);
-    }
-
-    &.vimeo {
-      padding-top: 0;
-    }
+@include exports("flex-video") {
+  @if $include-html-media-classes {
+    .flex-video { @include flex-video-container; }
   }
 }
