--- a/public/assets/styles/sass/foundation/components/_pagination.scss
+++ b/public/assets/styles/sass/foundation/components/_pagination.scss
@@ -1,158 +1,163 @@
-// Foundation for Sites by ZURB
+// Foundation by ZURB
 // foundation.zurb.com
 // Licensed under MIT Open Source
 
-////
-/// @group pagination
-////
+@import 'global';
 
-/// Font size of pagination items.
-/// @type Number
-$pagination-font-size: rem-calc(14) !default;
+//
+// @variables
+//
+$include-pagination-classes: $include-html-classes !default;
 
-/// Default bottom margin of the media object.
-/// @type Number
-$pagination-margin-bottom: $global-margin !default;
+// We use these to control the pagination container
+$pagination-height: rem-calc(24) !default;
+$pagination-margin: rem-calc(-5) !default;
 
-/// Text color of pagination items.
-/// @type Color
-$pagination-item-color: $black !default;
+// We use these to set the list-item properties
+$pagination-li-float: $default-float !default;
+$pagination-li-height: rem-calc(24) !default;
+$pagination-li-font-color: $jet !default;
+$pagination-li-font-size: rem-calc(14) !default;
+$pagination-li-margin: rem-calc(5) !default;
 
-/// Padding inside of pagination items.
-/// @type Number
-$pagination-item-padding: rem-calc(3 10) !default;
+// We use these for the pagination anchor links
+$pagination-link-pad: rem-calc(1 10 1) !default;
+$pagination-link-font-color: $aluminum !default;
+$pagination-link-active-bg: scale-color($white, $lightness: -10%) !default;
 
-/// Right margin to separate pagination items.
-/// @type Number
-$pagination-item-spacing: rem-calc(1) !default;
+// We use these for disabled anchor links
+$pagination-link-unavailable-cursor: default !default;
+$pagination-link-unavailable-font-color: $aluminum !default;
+$pagination-link-unavailable-bg-active: transparent !default;
 
-/// Default radius for pagination items.
-/// @type Number
-$pagination-radius: $global-radius !default;
+// We use these for currently selected anchor links
+$pagination-link-current-background: $primary-color !default;
+$pagination-link-current-font-color: $white !default;
+$pagination-link-current-font-weight: $font-weight-bold !default;
+$pagination-link-current-cursor: default !default;
+$pagination-link-current-active-bg: $primary-color !default;
 
-/// Background color of pagination items on hover.
-/// @type Color
-$pagination-item-background-hover: $light-gray !default;
+// @mixins
+//
+// Style the pagination container. Currently only used when centering elements.
+// $center - Default: false, Options: true
+@mixin pagination-container($center:false) {
+  @if $center { text-align: center; }
+}
 
-/// Background color of pagination item for the current page.
-/// @type Color
-$pagination-item-background-current: $primary-color !default;
-
-/// Text color of the pagination item for the current page.
-/// @type Color
-$pagination-item-color-current: foreground($pagination-item-background-current) !default;
-
-/// Text color of a disabled pagination item.
-/// @type Color
-$pagination-item-color-disabled: $medium-gray !default;
-
-/// Color of the ellipsis in a pagination menu.
-/// @type Color
-$pagination-ellipsis-color: $black !default;
-
-/// If `false`, don't display page number links on mobile, only next/previous links.
-/// @type Boolean
-$pagination-mobile-items: false !default;
-
-/// If `true`, arrows are added to the next and previous links of pagination.
-/// @type Boolean
-$pagination-arrows: true !default;
-
-/// Adds styles for a pagination container. Apply this to a `<ul>`.
-@mixin pagination-container {
-  @include clearfix;
-  margin-#{$global-left}: 0;
-  margin-bottom: $pagination-margin-bottom;
-
-  // List item
-  li {
-    font-size: $pagination-font-size;
-    margin-#{$global-right}: $pagination-item-spacing;
-    display: none;
-    border-radius: $pagination-radius;
-
-    @if not $pagination-mobile-items {
-      &:last-child,
-      &:first-child {
-        display: inline-block;
-      }
-
-      @include breakpoint(medium) {
-        display: inline-block;
-      }
-    }
+// @mixins
+// Style unavailable list items
+@mixin pagination-unavailable-item {
+  a, button {
+    cursor: $pagination-link-unavailable-cursor;
+    color: $pagination-link-unavailable-font-color;
+    pointer-events: none;
   }
+  &:hover a,
+  & a:focus,
 
-  // Page links
-  a,
-  button {
-    color: $pagination-item-color;
+  &:hover button,
+  & button:focus
+  { background: $pagination-link-unavailable-bg-active; }
+}
+// @mixins
+// Style the current list item. Do not assume that the current item has
+// an anchor <a> element.
+// $has-anchor - Default: true, Options: false
+@mixin pagination-current-item($has-anchor: true) {
+  @if $has-anchor {
+    a, button {
+      background: $pagination-link-current-background;
+      color: $pagination-link-current-font-color;
+      cursor: $pagination-link-current-cursor;
+      font-weight: $pagination-link-current-font-weight;
+
+      &:hover,
+      &:focus { background: $pagination-link-current-active-bg; }
+    }
+  } @else {
+    background: $pagination-link-current-background;
+    color: $pagination-link-current-font-color;
+    cursor: $pagination-link-current-cursor;
+    font-weight: $pagination-link-current-font-weight;
+    height: auto;
+    padding: $pagination-link-pad;
+    @include radius;
+
+    &:hover,
+    &:focus { background: $pagination-link-current-active-bg; }
+  }
+}
+
+// @mixins
+//
+// We use this mixin to set the properties for the creating Foundation pagination
+// $center - Left or center align the li elements. Default: false
+// $base-style - Sets base styles for pagination. Default: true, Options: false
+// $use-default-classes - Makes unavailable & current classes available for use. Default: true
+@mixin pagination($center:false, $base-style:true, $use-default-classes:true) {
+
+  @if $base-style {
     display: block;
-    padding: $pagination-item-padding;
-    border-radius: $global-radius;
+    margin-#{$default-float}: $pagination-margin;
+    min-height: $pagination-height;
 
-    &:hover {
-      background: $pagination-item-background-hover;
-    }
-  }
-}
+    li {
+      color: $pagination-li-font-color;
+      font-size: $pagination-li-font-size;
+      height: $pagination-li-height;
+      margin-#{$default-float}: $pagination-li-margin;
 
-/// Adds styles for the current pagination item. Apply this to an `<a>`.
-@mixin pagination-item-current {
-  padding: $pagination-item-padding;
-  background: $pagination-item-background-current;
-  color: $pagination-item-color-current;
-  cursor: default;
-}
+      a, button {
+        @include radius;
+        @include single-transition(background-color);
+        background: none;
+        color: $pagination-link-font-color;
+        display: block;
+        font-size: 1em;
+        font-weight: normal;
+        line-height: inherit;
+        padding: $pagination-link-pad;
+      }
 
-/// Adds styles for a disabled pagination item. Apply this to an `<a>`.
-@mixin pagination-item-disabled {
-  padding: $pagination-item-padding;
-  color: $pagination-item-color-disabled;
-  cursor: default;
+      &:hover a,
+      a:focus,
+      &:hover button,
+      button:focus
+      { background: $pagination-link-active-bg; }
 
-  &:hover {
-    background: transparent;
-  }
-}
-
-/// Adds styles for an ellipsis for use in a pagination list.
-@mixin pagination-ellipsis {
-  content: '…';
-  padding: $pagination-item-padding;
-  color: $pagination-ellipsis-color;
-}
-
-@mixin foundation-pagination {
-  .pagination {
-    @include pagination-container;
-
-    .current {
-      @include pagination-item-current;
-    }
-
-    .disabled {
-      @include pagination-item-disabled;
-    }
-
-    .ellipsis::after {
-      @include pagination-ellipsis;
+      @if $use-default-classes {
+        &.unavailable { @include pagination-unavailable-item(); }
+        &.current { @include pagination-current-item(); }
+      }
     }
   }
 
-  @if $pagination-arrows {
-    .pagination-previous a::before,
-    .pagination-previous.disabled::before {
-      content: '«';
+  // Left or center align the li elements
+  li {
+    @if $center {
       display: inline-block;
-      margin-#{$global-right}: 0.5rem;
+      float: none;
+    } @else {
+      display: block;
+      float: $pagination-li-float;
+    }
+  }
+}
+
+@include exports("pagination") {
+  @if $include-pagination-classes {
+    ul.pagination {
+      @include pagination;
     }
 
-    .pagination-next a::after,
-    .pagination-next.disabled::after {
-      content: '»';
-      display: inline-block;
-      margin-#{$global-left}: 0.5rem;
+    /* Pagination centred wrapper */
+    .pagination-centered {
+      @include pagination-container(true);
+
+      ul.pagination {
+        @include pagination(true, false);
+      }
     }
   }
 }
