--- a/public/assets/styles/sass/app.scss
+++ b/public/assets/styles/sass/app.scss
@@ -1,10 +1,8 @@
-
 @charset "UTF-8";
 
 @import "foundation";
-@import "bourbon";
 
-$flex: false;
+$flex: true;
 @include foundation-everything($flex);
 
 // 3rd Party Overrides
